# shdy

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp  shdy.c  shdy.cpp  shdy.frag  shdy.glsl  shdy.h  test.frag  test.glsl
include/: shdy.h
src/: shdy.cpp  shdy.frag
